--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: doner_management_system_development
+  database: donor_management_system_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: doner_management_system_test
+  database: donor_management_system_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: doner_management_system_production
-  username: doner_management_system
+  database: donor_management_system_production
+  username: donor_management_system
   password: <%= ENV['DONER_MANAGEMENT_SYSTEM_DATABASE_PASSWORD'] %>
